Save settings with m_kEmailSettings as well to replace kcm_useraccounts

add symlink in ~/.face.icon the file used by some login managers

save settings with kemailsettings

this allows us to stop shipping kcm_useraccounts which saved using
this class to a file in ~/.config/emaildefaults

also make an avatar link in ~/.face.icon which is used by some display managers

BUG: 342631
REVIEW: 124571