src/lib/accountmodel.cpp
@@ -55,6 +55,9 @@ AccountModel::AccountModel(QObject* parent)
     //Adding fake "new user" directly into cache
     addAccountToCache("new-user", 0);
 
+    m_kEmailSettings = new KEMailSettings();
+    m_kEmailSettings->setProfile(m_kEmailSettings->defaultProfileName());
+
     connect(m_dbus, SIGNAL(UserAdded(QDBusObjectPath)), SLOT(UserAdded(QDBusObjectPath)));
     connect(m_dbus, SIGNAL(UserDeleted(QDBusObjectPath)), SLOT(UserDeleted(QDBusObjectPath)));
 
@@ -158,6 +161,7 @@ bool AccountModel::setData(const QModelIndex& index, const QVariant& value, int 
             if (checkForErrors(acc->SetRealName(value.toString()))) {
                 return false;
             }
+            m_kEmailSettings->setSetting(KEMailSettings::RealName, value.toString());
 
             m_dbus->UncacheUser(acc->userName()).waitForFinished();
             m_dbus->CacheUser(acc->userName());
@@ -181,6 +185,7 @@ bool AccountModel::setData(const QModelIndex& index, const QVariant& value, int 
             if (checkForErrors(acc->SetEmail(value.toString()))) {
                 return false;
             }
+            m_kEmailSettings->setSetting(KEMailSettings::EmailAddress, value.toString());
 
             emit dataChanged(index, index);
             return true;
